--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,18 @@ sudo: required
 
 script:
   - export GOPATH=/source/kiali/kiali
-  - mkdir -p $GOPATH
+  - sudo mkdir -p $GOPATH
   - cd $GOPATH
-  - mkdir -p src/github.com/kiali
+  - sudo mkdir -p src/github.com/kiali
   - cd src/github.com/kiali
-  - git clone git@github.com:kiali/kiali
+  - sudo git clone git@github.com:kiali/kiali
   - export PATH=${PATH}:${GOPATH}/bin
   - cd ${GOPATH}/src/github.com/kiali/kiali
-  - make dep-install
+  - sudo make dep-install
   - cd ${GOPATH}/src/github.com/kiali/kiali
-  - make dep-update
+  - sudo make dep-update
   - cd ${GOPATH}/src/github.com/kiali/kiali
-  - make build
+  - sudo make build
   - cd ${GOPATH}/src/github.com/kiali/kiali
-  - make test
+  - sudo make test
 
