--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ script:
   - cd $GOPATH
   - sudo mkdir -p src/github.com/kiali
   - cd src/github.com/kiali
-  - sudo git clone git@github.com:kiali/kiali
+  - sudo git clone -y git@github.com:kiali/kiali
   - export PATH=${PATH}:${GOPATH}/bin
   - cd ${GOPATH}/src/github.com/kiali/kiali
   - sudo make dep-install
