--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ sudo: required
 before_install:
   - sudo apt-get update
   - wget https://dl.google.com/go/go1.9.4.linux-ppc64le.tar.gz
-  - sudo tar -xvf go1.11.4.linux-amd64.tar.gz
+  - sudo tar -xvf go1.9.4.linux-ppc64le.tar.gz
   - sudo mv go /usr/local
   - export GOROOT=/usr/local/go
   
