--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ sudo: required
 before_install:
   - sudo apt-get update
   - wget https://dl.google.com/go/go1.9.4.linux-ppc64le.tar.gz
-  - sudo tar -xvf go1.9.4.linux-ppc64le.tar.gz
+  - sudo tar -C /usr/local -xzf go1.9.4.linux-ppc64le.tar.gz
   - sudo mv go /usr/local
-  - export GOROOT=/usr/local/go
+  - export PATH=$PATH:/usr/local/go/bin
   
 script:
   - export GOPATH=/source/kiali/kiali
