--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,11 @@ os:
   - linux-ppc64le
 sudo: required
 
+language: go
+go:
+- 1.9.4
+
 before_install:
-  - sudo apt-get update
-  - sudo wget https://dl.google.com/go/go1.9.4.linux-ppc64le.tar.gz
-  - sudo tar -C /usr/local -xzf go1.9.4.linux-ppc64le.tar.gz
-  - export PATH=$PATH:/usr/local/go/bin
-  - cd /usr/local/go/bin
   
 script:
   - export GOPATH=/source/kiali/kiali
