--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,22 @@ os:
   - linux-ppc64le
 sudo: required
 
-language: go
-go:
-  - "1.9.4"
+before_install:
+  - sudo apt-get update
+  - sudo wget https://dl.google.com/go/go1.9.4.linux-ppc64le.tar.gz
+  - sudo tar -C /usr/local -xzf go1.9.4.linux-ppc64le.tar.gz
+  - export PATH=$PATH:/usr/local/go/bin
+  - cd /usr/local/go/bin
   
 script:
-   - cd $GOPATH/src/github.com
-  - mkdir kiali
-  - cd kiali
-  - git clone https://github.com/kiali/kiali.git
-  - cd kiali
+  - export GOPATH=/source/kiali/kiali
+  - sudo mkdir -p $GOPATH
+  - cd $GOPATH
+  - sudo mkdir -p src/github.com/kiali
+  - cd src/github.com/kiali
+  - sudo git clone https://github.com/kiali/kiali.git
+  - export PATH=${PATH}:${GOPATH}/bin
+  - cd ${GOPATH}/src/github.com/kiali/kiali
   - sudo make dep-install
   - sudo make build
   - sudo make test
