--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ script:
   - cd kiali
   - git clone https://github.com/kiali/kiali.git
   - cd kiali  
+  - export GOBIN=$GOPATH/bin
+
   - sudo make dep-install
   - sudo make build
   - sudo make test
