--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ os:
 sudo: required
 
 before_install:
+  - pwd
   - sudo apt-get update
   - sudo wget https://dl.google.com/go/go1.9.4.linux-ppc64le.tar.gz
   - sudo tar -C /usr/local -xzf go1.9.4.linux-ppc64le.tar.gz
