--- a/.travis.yml
+++ b/.travis.yml
@@ -28,10 +28,7 @@ before_script:
   - cd kiali
   - git clone https://github.com/kiali/kiali.git
   - cd kiali    
-  - wget https://oplab9.parqtec.unicamp.br/pub/ppc64el/glide/glide-0.13.1
-  - mv glide-0.13.1 glide
-  - sudo chmod 755 glide
-  - sudo mv glide /usr/local/bin/glide
+  - sudo apt install golang-glide
   - GO_FILES=$(find . -iname '*.go' -type f | grep -v /vendor/) # All the .go files, excluding vendor/
 
 env:
