--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,11 @@ before_script:
   - cd kiali
   - git clone https://github.com/kiali/kiali.git
   - cd kiali    
-  - sudo apt install golang-glide
+  - wget https://oplab9.parqtec.unicamp.br/pub/ppc64el/glide/glide-0.13.1
+  - mv glide-0.13.1 glide
+  - sudo chmod 755 glide
+  - sudo mv glide /usr/bin/glide
+  - glide
   - GO_FILES=$(find . -iname '*.go' -type f | grep -v /vendor/) # All the .go files, excluding vendor/
 
 env:
