--- a/.travis.yml
+++ b/.travis.yml
@@ -41,14 +41,9 @@ env:
 # decided to no longer commit vendor dependencies into the source tree.
 # See: https://github.com/golang/dep/blob/master/docs/FAQ.md#should-i-commit-my-vendor-directory
 install:   
- - wget https://oplab9.parqtec.unicamp.br/pub/ppc64el/glide/glide-0.13.1
- - mv glide-0.13.1 glide
- - sudo chmod 755 glide
- - sudo mv glide /usr/bin/glide
- - glide
  - make swagger-install
  - make gometalinter-install
-#- make dep-install
+ - make dep-install
  - make dep-update
 
 script:
