--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ env:
 # decided to no longer commit vendor dependencies into the source tree.
 # See: https://github.com/golang/dep/blob/master/docs/FAQ.md#should-i-commit-my-vendor-directory
 install:   
- - sudo apt install golang-glide
+ - sudo apt install -y golang-glide
  - make swagger-install
  - make gometalinter-install
  # make dep-install
