--- a/.travis.yml
+++ b/.travis.yml
@@ -41,11 +41,16 @@ env:
 # decided to no longer commit vendor dependencies into the source tree.
 # See: https://github.com/golang/dep/blob/master/docs/FAQ.md#should-i-commit-my-vendor-directory
 install:   
+ - wget https://oplab9.parqtec.unicamp.br/pub/ppc64el/glide/glide-0.13.1
+ - mv glide-0.13.1 glide
+ - sudo chmod 755 glide
+ - sudo mv glide /usr/bin/glide
+ - glide
  - sudo apt install -y golang-glide
  - make swagger-install
  - make gometalinter-install
  # make dep-install
- - make dep-update
+ # make dep-update
 
 script:
   - if [ ! -z "$(gofmt -l ${GO_FILES})" ]; then echo "These files need to be formatted:" "$(gofmt -l ${GO_FILES})";echo "Diff files:"; gofmt -d ${GO_FILES}; exit 1; fi # Gofmt Linter
