--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 os: linux
 arch: ppc64le
-dist: bionic
+dist: focal
 language: go
 sudo: required
   
 #services:
 #- docker
 
-go: 1.14.x
+go: 1.16.x
 
 install:
  - sudo apt update
