--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ script:
   - cd $GOPATH/src/github.com/kiali/kiali
   - make build
   - make test
+  - cd $GOPATH/bin
+  - ./kiali version
 
 notifications:
   slack:
